--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     compile 'org.quartz-scheduler:quartz:2.1.5'
+    compile group: 'com.linecorp.bot', name: 'line-bot-api-client', version: '1.5.0'
+    compile group: 'com.linecorp.bot', name: 'line-bot-model', version: '1.5.0'
     provided 'org.projectlombok:lombok:1.16.10'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
