--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile 'org.quartz-scheduler:quartz:2.1.5'
     compile group: 'com.linecorp.bot', name: 'line-bot-api-client', version: '1.5.0'
     compile group: 'com.linecorp.bot', name: 'line-bot-model', version: '1.5.0'
+    compile group: 'org.cache2k', name: 'cache2k-api', version: '1.0.0.CR2'
+    compile group: 'org.cache2k', name: 'cache2k-all', version: '1.0.0.CR2'
     provided 'org.projectlombok:lombok:1.16.10'
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
